--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,8 @@ dmypy.json
 # --------------------------------------------------------------------
 # Specific project ignores
 # --------------------------------------------------------------------
-open_data/*
+input/*
+output/*
 test.ipynb
 
 # --------------------------------------------------------------------
